# SatTrack

./: .gitignore  CHANGELOG.md  Procfile  Procfile.windows  README.html  README.md  app.py  app_dev.py  pyproject.toml  requirements.txt  run_app.py  run_app_dev.py  run_pipeline.py  run_pipeline_manual.py  satcat_pipeline.py  sattrackapp.py  sync_dependencies.sh  test_heroku_deployment.sh  tle_pipeline.py  user_setup_pipeline.py
.github/workflows/: sync-requirements.yml
.ipynb_checkpoints/: run_app-checkpoint.py  run_app_dev-checkpoint.py
app/: __version__.py
app/callbacks/: __init__.py  callback_2d_viz.py  callback_3d_viz.py  callback_filters.py  callback_home.py  callback_navbar.py  callback_registry.py  callback_sat_applications.py  callback_sat_visualisations.py  callback_table.py
app/components/: __init__.py  navbar.py
app/config/: __init__.py  user_setup_app.py
app/content/: __init__.py  content_buttons.py
app/core/: state.py
app/helper/: __init__.py  app_settings.py  celestial_geometry_funs.py  helper__app_data.py  helper__constants.py  helper__filter_display.py  helper__plot_display.py  helper__satellite_position.py  helper__table_display.py  initialise_app.py  initialise_app_data.py  teme_to_geodetic.py
app/layouts/: __init__.py  layout_home.py  layout_navbar.py  layout_sat_applications.py  layout_sat_science.py  layout_sat_visualisations.py
app/styles/: __init__.py  styles_sat_explained.py  styles_sat_visualisations.py
assets/: custom.css
dat/clean/: celestrak_satcat.csv  clean_satcat.csv  enriched_satcat.csv  merged_satcat.csv  (+7 more)
src/: Untitled.ipynb  celestial_geometry_funs.py  celestrak_import.py  create_satcat.py  extract_TLEs.py  ucs_import.py
tst/: Untitled.ipynb
(+59 files in other folders)
