[tool.poetry]
name = "sattrack"
version = "2.0.1"
description = "An open-source real-time satellite tracking app for visualising active and inactive satellites orbiting the Earth"
authors = ["Francis Nwobu"]
readme = "README.md"
license = "MIT"
homepage = "https://sattrackapp.herokuapp.com/"
repository = "https://github.com/your-username/SatTrack"
keywords = ["satellite", "tracking", "visualization", "orbital", "TLE", "space"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
astropy = "^6.0.0"
beautifulsoup4 = "^4.12.0"
dash = "^2.12.1"
dash-bootstrap-components = "^1.1.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
Pillow = "^10.0.0"
plotly = "^5.7.0"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
sgp4 = "^2.21"
xlrd = "^2.0.1"
gunicorn = "^20.1.0"
whitenoise = "^6.0.0"
dash-vtk = "^0.0.9"
unidecode = "^1.3.4"
nltk = "^3.8.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
